@@ -13,6 +13,7 @@ import org.springframework.stereotype.Service;
 import javax.transaction.Transactional;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -29,7 +30,7 @@ public class UsuarioService implements IUsuarioService {
         return usuarios
                 .stream()
                 .map(this::mapearDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
